# justsubs

./: .gitignore  LICENSE  README.md  example.py  justfile  pyproject.toml  test_justsubs.py
examples/: download.py  example.py  list_subs.py  more.py  rodion.py  vtt_e2e.py
justsubs/: __init__.py  cli.py  issue_3_fix_from_mika256.diff  manage_subtitles.py  manage_vtt.py  test_manage_vtt.py
speakers/: dobrichev.py  rodion.py  rodion.txt  sarno.py  sarno_en.text  sarno_ru.txt  speakers.bat  test_sarno.py
tests/: test_justsubs.py
