[tool.poetry]
name = "justsubs"
version = "0.3.0"
description = "Download subtitles from YouTube as plain text."
authors = ["Evgeny Pogrebnyak <e.pogrebnyak@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/epogrebnyak/justsubs"

[tool.poetry.dependencies]
python = "^3.10"
yt-dlp = "^2024.3.10"
typer = "^0.10.0"

[tool.poetry.scripts]
justsubs = 'justsubs.cli:app'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
